@startuml

title __POGODA's Class Diagram__\n

  namespace  {
    namespace om.example.pogoda {
      class com.example.pogoda.HelloApplication {
          {static} + main()
          + start()
      }
    }
  }
  

  namespace  {
    namespace om.example.pogoda {
      class com.example.pogoda.HelloController {
          + cityNameTextField : TextField
          + google : Label
          + googleMaps : Label
          + meow_fact : Label
          + weatherIcon : ImageView
          + wikipedia : Label
          - welcomeText : Label
          + cityfromlist()
          + getMeow()
          + getbyIP()
          + initialize()
          + loadlocation()
          + onShowWeatherButton()
          + savelocation()
          + start()
          + statistic()
      }
    }
  }
  

  namespace  {
    namespace om.example.pogoda {
      class com.example.pogoda.ObjectWeatherHistory {
          ~ hour : Integer
          ~ humidity : Double
          ~ pressure : Double
          ~ temperture : Double
          ~ windSpeed : Double
          + ObjectWeatherHistory()
          + ObjectWeatherHistory()
          + getHour()
          + getHumidity()
          + getPressure()
          + getTemperture()
          + getWindSpeed()
          + setHour()
          + setHumidity()
          + setPressure()
          + setTemperture()
          + setWindSpeed()
      }
    }
  }
  

  com.example.pogoda.HelloApplication -up-|> javafx.application.Application
  com.example.pogoda.HelloController -up-|> javafx.application.Application


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
